# FlappyBirdAI

./: .gitignore  README.md  config-feedforward.txt  flappy_bird_ai.py  pyproject.toml
config/: consts.py
entities/: base.py  bird.py  pipe.py
entities/domain/: base.py  bird.py  pipe.py
entities/infra/: base.py  bird.py  pipe.py
helpers/: draw_window.py
