[tool.poetry]
name = "flappy-bird-ai"
version = "0.1.0"
description = ""
authors = ["Matheus Kolln <matheuzhenrik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
neat-python = "^0.92"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
